// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectDetail > 로딩 상태를 표시한다 1`] = `
<div>
  <div
    class="p-6"
  >
    <div
      class="text-center py-12"
    >
      로딩 중...
    </div>
  </div>
</div>
`;

exports[`ProjectDetail > 빈 상태를 표시한다 1`] = `
<div>
  <div
    class="p-6 space-y-6"
  >
    <div
      class="flex items-center gap-4"
    >
      <a
        href="/projects"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover-elevate active-elevate-2 border border-transparent h-9 w-9"
          data-testid="button-back"
        >
          <svg
            class="lucide lucide-arrow-left w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12 19-7-7 7-7"
            />
            <path
              d="M19 12H5"
            />
          </svg>
        </button>
      </a>
      <div
        class="flex-1"
      >
        <div
          class="flex items-center gap-3 mb-2"
        >
          <h1
            class="text-4xl font-bold"
          >
            테스트 프로젝트
          </h1>
          <div
            class="whitespace-nowrap inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 hover-elevate border-transparent shadow-xs bg-orange-500/20 text-orange-400"
          >
            진행중
          </div>
        </div>
        <p
          class="text-muted-foreground"
        >
          테스트용 프로젝트
        </p>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover-elevate active-elevate-2 bg-primary text-primary-foreground border border-primary-border min-h-9 px-4 py-2"
          data-testid="button-generate-report"
        >
          <svg
            class="lucide lucide-file-text w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          보고서 생성
        </button>
      </div>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"
    >
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div
            class="flex-1"
          >
            <p
              class="text-sm text-muted-foreground mb-2"
            >
              발송 수
            </p>
            <p
              class="text-3xl font-bold text-primary"
              data-testid="stat-발송-수"
            >
              3
            </p>
          </div>
          <div
            class="ml-4"
          >
            <svg
              class="lucide lucide-mail w-6 h-6 text-primary/60"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="16"
                rx="2"
                width="20"
                x="2"
                y="4"
              />
              <path
                d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div
            class="flex-1"
          >
            <p
              class="text-sm text-muted-foreground mb-2"
            >
              오픈률
            </p>
            <p
              class="text-3xl font-bold text-primary"
              data-testid="stat-오픈률"
            >
              33%
            </p>
            <p
              class="text-xs text-muted-foreground mt-2"
            >
              1명 열람
            </p>
          </div>
          <div
            class="ml-4"
          >
            <svg
              class="lucide lucide-eye w-6 h-6 text-primary/60"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div
            class="flex-1"
          >
            <p
              class="text-sm text-muted-foreground mb-2"
            >
              클릭률
            </p>
            <p
              class="text-3xl font-bold text-primary"
              data-testid="stat-클릭률"
            >
              33%
            </p>
            <p
              class="text-xs text-muted-foreground mt-2"
            >
              1명 클릭
            </p>
          </div>
          <div
            class="ml-4"
          >
            <svg
              class="lucide lucide-mouse-pointer w-6 h-6 text-primary/60"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.586 12.586 19 19"
              />
              <path
                d="M3.688 3.037a.497.497 0 0 0-.651.651l6.5 15.999a.501.501 0 0 0 .947-.062l1.569-6.083a2 2 0 0 1 1.448-1.479l6.124-1.579a.5.5 0 0 0 .063-.947z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div
            class="flex-1"
          >
            <p
              class="text-sm text-muted-foreground mb-2"
            >
              제출률
            </p>
            <p
              class="text-3xl font-bold text-primary"
              data-testid="stat-제출률"
            >
              0%
            </p>
            <p
              class="text-xs text-muted-foreground mt-2"
            >
              0명 제출
            </p>
          </div>
          <div
            class="ml-4"
          >
            <svg
              class="lucide lucide-file-text w-6 h-6 text-primary/60"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <path
                d="M10 9H8"
              />
              <path
                d="M16 13H8"
              />
              <path
                d="M16 17H8"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-1 lg:grid-cols-2 gap-6"
    >
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <h2
          class="text-xl font-semibold mb-4"
        >
          훈련 진행 추세
        </h2>
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 300px; min-width: 0;"
        />
      </div>
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <h2
          class="text-xl font-semibold mb-4"
        >
          부서별 분포
        </h2>
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 300px; min-width: 0;"
        />
      </div>
    </div>
    <div
      class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
    >
      <h2
        class="text-xl font-semibold mb-4"
      >
        대상자 상세
      </h2>
      <div
        class="border rounded-md"
      >
        <div
          class="relative w-full overflow-auto"
        >
          <table
            class="w-full caption-bottom text-sm"
          >
            <thead
              class="[&_tr]:border-b"
            >
              <tr
                class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
              >
                <th
                  class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
                >
                  이름
                </th>
                <th
                  class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
                >
                  이메일
                </th>
                <th
                  class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
                >
                  소속
                </th>
                <th
                  class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
                >
                  상태
                </th>
                <th
                  class="h-12 px-4 align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 text-right"
                >
                  액션
                </th>
              </tr>
            </thead>
            <tbody
              class="[&_tr:last-child]:border-0"
            >
              <tr
                class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
              >
                <td
                  class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-center py-8 text-muted-foreground"
                  colspan="5"
                >
                  대상자가 없습니다
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
    >
      <h2
        class="text-xl font-semibold mb-4"
      >
        이벤트 타임라인
      </h2>
      <div
        class="space-y-4"
      >
        <div
          class="text-sm text-muted-foreground"
        >
          이벤트가 없습니다.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectDetail > 정상 상태를 표시한다 1`] = `
<div>
  <div
    class="p-6 space-y-6"
  >
    <div
      class="flex items-center gap-4"
    >
      <a
        href="/projects"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover-elevate active-elevate-2 border border-transparent h-9 w-9"
          data-testid="button-back"
        >
          <svg
            class="lucide lucide-arrow-left w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12 19-7-7 7-7"
            />
            <path
              d="M19 12H5"
            />
          </svg>
        </button>
      </a>
      <div
        class="flex-1"
      >
        <div
          class="flex items-center gap-3 mb-2"
        >
          <h1
            class="text-4xl font-bold"
          >
            테스트 프로젝트
          </h1>
          <div
            class="whitespace-nowrap inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 hover-elevate border-transparent shadow-xs bg-orange-500/20 text-orange-400"
          >
            진행중
          </div>
        </div>
        <p
          class="text-muted-foreground"
        >
          테스트용 프로젝트
        </p>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover-elevate active-elevate-2 bg-primary text-primary-foreground border border-primary-border min-h-9 px-4 py-2"
          data-testid="button-generate-report"
        >
          <svg
            class="lucide lucide-file-text w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
          보고서 생성
        </button>
      </div>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6"
    >
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div
            class="flex-1"
          >
            <p
              class="text-sm text-muted-foreground mb-2"
            >
              발송 수
            </p>
            <p
              class="text-3xl font-bold text-primary"
              data-testid="stat-발송-수"
            >
              3
            </p>
          </div>
          <div
            class="ml-4"
          >
            <svg
              class="lucide lucide-mail w-6 h-6 text-primary/60"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="16"
                rx="2"
                width="20"
                x="2"
                y="4"
              />
              <path
                d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div
            class="flex-1"
          >
            <p
              class="text-sm text-muted-foreground mb-2"
            >
              오픈률
            </p>
            <p
              class="text-3xl font-bold text-primary"
              data-testid="stat-오픈률"
            >
              33%
            </p>
            <p
              class="text-xs text-muted-foreground mt-2"
            >
              1명 열람
            </p>
          </div>
          <div
            class="ml-4"
          >
            <svg
              class="lucide lucide-eye w-6 h-6 text-primary/60"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div
            class="flex-1"
          >
            <p
              class="text-sm text-muted-foreground mb-2"
            >
              클릭률
            </p>
            <p
              class="text-3xl font-bold text-primary"
              data-testid="stat-클릭률"
            >
              33%
            </p>
            <p
              class="text-xs text-muted-foreground mt-2"
            >
              1명 클릭
            </p>
          </div>
          <div
            class="ml-4"
          >
            <svg
              class="lucide lucide-mouse-pointer w-6 h-6 text-primary/60"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.586 12.586 19 19"
              />
              <path
                d="M3.688 3.037a.497.497 0 0 0-.651.651l6.5 15.999a.501.501 0 0 0 .947-.062l1.569-6.083a2 2 0 0 1 1.448-1.479l6.124-1.579a.5.5 0 0 0 .063-.947z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div
            class="flex-1"
          >
            <p
              class="text-sm text-muted-foreground mb-2"
            >
              제출률
            </p>
            <p
              class="text-3xl font-bold text-primary"
              data-testid="stat-제출률"
            >
              0%
            </p>
            <p
              class="text-xs text-muted-foreground mt-2"
            >
              0명 제출
            </p>
          </div>
          <div
            class="ml-4"
          >
            <svg
              class="lucide lucide-file-text w-6 h-6 text-primary/60"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
              />
              <path
                d="M14 2v4a2 2 0 0 0 2 2h4"
              />
              <path
                d="M10 9H8"
              />
              <path
                d="M16 13H8"
              />
              <path
                d="M16 17H8"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-1 lg:grid-cols-2 gap-6"
    >
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <h2
          class="text-xl font-semibold mb-4"
        >
          훈련 진행 추세
        </h2>
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 300px; min-width: 0;"
        />
      </div>
      <div
        class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
      >
        <h2
          class="text-xl font-semibold mb-4"
        >
          부서별 분포
        </h2>
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 300px; min-width: 0;"
        />
      </div>
    </div>
    <div
      class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
    >
      <h2
        class="text-xl font-semibold mb-4"
      >
        대상자 상세
      </h2>
      <div
        class="border rounded-md"
      >
        <div
          class="relative w-full overflow-auto"
        >
          <table
            class="w-full caption-bottom text-sm"
          >
            <thead
              class="[&_tr]:border-b"
            >
              <tr
                class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
              >
                <th
                  class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
                >
                  이름
                </th>
                <th
                  class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
                >
                  이메일
                </th>
                <th
                  class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
                >
                  소속
                </th>
                <th
                  class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
                >
                  상태
                </th>
                <th
                  class="h-12 px-4 align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 text-right"
                >
                  액션
                </th>
              </tr>
            </thead>
            <tbody
              class="[&_tr:last-child]:border-0"
            >
              <tr
                class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
              >
                <td
                  class="p-4 align-middle [&:has([role=checkbox])]:pr-0 font-medium"
                >
                  <span
                    class=""
                  >
                    김철수
                  </span>
                </td>
                <td
                  class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
                >
                  <span
                    class=""
                  >
                    kim@example.com
                  </span>
                </td>
                <td
                  class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
                >
                  <span
                    class=""
                  >
                    영업부
                  </span>
                </td>
                <td
                  class="p-4 align-middle [&:has([role=checkbox])]:pr-0"
                >
                  <div
                    class="whitespace-nowrap inline-flex items-center rounded-md px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 hover-elevate border [border-color:var(--badge-outline)] shadow-xs"
                  >
                    클릭
                  </div>
                </td>
                <td
                  class="p-4 align-middle [&:has([role=checkbox])]:pr-0 text-right"
                >
                  <button
                    class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover-elevate active-elevate-2 border border-transparent min-h-8 rounded-md px-3 text-xs"
                    data-testid="button-view-log-target-1"
                  >
                    상세 로그
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="shadcn-card rounded-xl border bg-card border-card-border text-card-foreground shadow-sm p-6"
    >
      <h2
        class="text-xl font-semibold mb-4"
      >
        이벤트 타임라인
      </h2>
      <div
        class="space-y-4"
      >
        <div
          class="flex items-start gap-4 pb-4 border-b last:border-0"
        >
          <div
            class="p-2 rounded-md bg-primary/10"
          >
            <svg
              class="lucide lucide-clock w-4 h-4 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
          </div>
          <div
            class="flex-1"
          >
            <p
              class="font-medium"
            >
              김철수
               - 
              클릭
            </p>
            <p
              class="text-sm text-muted-foreground"
            >
              2025-01-01 18:05
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 pb-4 border-b last:border-0"
        >
          <div
            class="p-2 rounded-md bg-primary/10"
          >
            <svg
              class="lucide lucide-clock w-4 h-4 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <polyline
                points="12 6 12 12 16 14"
              />
            </svg>
          </div>
          <div
            class="flex-1"
          >
            <p
              class="font-medium"
            >
              김철수
               - 
              열람
            </p>
            <p
              class="text-sm text-muted-foreground"
            >
              2025-01-01 18:00
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
